--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
   --color-secondary-active: #3f3f3f;
   --color-border: #787878;
   --color-active: #6fb3ff;
+  --color-secondary-text: #474747;
 
 }
 
@@ -20,11 +21,19 @@ body {
 }
 
 
-.masked-text {
-  mask: url(#text-mask);
-  -webkit-mask: url(#text-mask);
-  mask-repeat: no-repeat;
-  mask-size: contain;
-  mask-position: 100px 0px;
-  /* adjust as needed */
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+  /* Chrome, Safari, Opera */
+}
+
+.button{
+  cursor: pointer;
 }
