--- a/src/index.css
+++ b/src/index.css
@@ -1,40 +1,38 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+	--background: #ffffff;
+	--foreground: #171717;
 }
 
 @theme {
-  --color-accent: #07f96e;
-  --color-accent-active: #57fb9d;
-  --color-secondary: #2e2e2e;
-  --color-secondary-active: #3f3f3f;
-  --color-border: #787878;
-  --color-active: #6fb3ff;
-  --color-secondary-text: #474747;
-
+	--color-accent: #07f96e;
+	--color-accent-active: #57fb9d;
+	--color-secondary: #2e2e2e;
+	--color-secondary-active: #3f3f3f;
+	--color-border: #787878;
+	--color-active: #6fb3ff;
+	--color-secondary-text: #474747;
+	--breakpoint-md: 900px;
 }
 
 body {
-  font-family: Poppins, sans-serif;
+	font-family: Poppins, sans-serif;
 }
 
-
-
 .scrollbar-hide {
-  -ms-overflow-style: none;
-  /* IE and Edge */
-  scrollbar-width: none;
-  /* Firefox */
+	-ms-overflow-style: none;
+	/* IE and Edge */
+	scrollbar-width: none;
+	/* Firefox */
 }
 
 .scrollbar-hide::-webkit-scrollbar {
-  display: none;
-  /* Chrome, Safari, Opera */
+	display: none;
+	/* Chrome, Safari, Opera */
 }
 
-button{
-  cursor: pointer;
-  outline:none;
+button {
+	cursor: pointer;
+	outline: none;
 }
